--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3.5'
 
 services:
   luckperms-mariadb:
+    image: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD:
-      MYSQL_DATABASE:
-      MYSQL_USER:
-      MYSQL_PASSWORD:
-    volumes:
+      MYSQL_ROOT_PASSWORD_FILE: ./secrets/mysql_root
+      MYSQL_DATABASE_FILE: ./secrets/mysql_db
+      MYSQL_USER_FILE: ./secrets/mysql_user
+      MYSQL_PASSWORD_FILE: ./secrets/mysql_pass
+#    volumes:
 #      - luckperms-mariadb:/var/lib/mysql
     restart: unless-stopped
