--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 docker-compose.yml
+minecraft-config/luckperms-mariadb/mysql/*
+minecraft-config/mc-waterfall-proxy/config.yml
+minecraft-config/mc-waterfall-proxy/waterfall_plugins/*
