--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -3,12 +3,20 @@
 docker_users:
   - kump
 
-#ironicbadger.docker_compose_generator
+# variables for mc-waterfall-proxy configuration
+proxy_motd: '&3Kumpdev Ansible Testbed!'
+proxy_priority_server: "lobby"
+
+# Variables that are used in configuration below
+mc_connection_port: 25565
+mc_version: 1.16.3
+mc_ops: "Kumpy"
+
+# ironicbadger.docker_compose_generator
 containers:
-  # This container is used for the luckperms database so that the server network has one central permissions system.
-  # This prevents the admin from having to update permissions on all servers individually
+# This container is used for the luckperms database so that the server network has one central permissions system.
+# This prevents the admin from having to update permissions on all servers individually
   - service_name: luckperms-mariadb
-    container_name: luckperms-mariadb
     image: mariadb
     # active: determines whether or not container is included in resulting docker-compose file
     active: true
@@ -18,19 +26,23 @@ containers:
       - "MYSQL_DATABASE={{ mysql_db }}"
       - "MYSQL_USER={{ mysql_user }}"
       - "MYSQL_PASSWORD={{ mysql_pass }}"
+    volumes:
+      - "./minecraft-config/luckperms-mariadb/mysql:/var/lib/mysql"
     restart: unless-stopped
-  # This container is the bungeecord proxy, it handles player connections to all servers in the network
-  - service_name: bungeecord
-    container_name: bungeecord
+# This container is the waterfall proxy, it handles player connections to all servers in the network
+  - service_name: mc-waterfall-proxy
+    image: itzg/bungeecord
+    active: true
+    environment:
+      - "TYPE=WATERFALL"
     ports:
-      - "{{ mc_connection_port}}:25577"  # port 25577 is what bungeecord is configured to listen on
-#    volumes:
-#      - "path/to/config.yml:/server/config.yml"
-#      - "path/to/bungeecord_plugins:/plugins"
+      - "{{ mc_connection_port}}:25577"  # port 25577 is what waterfall is configured to listen on
+    volumes:
+      - "./minecraft-config/mc-waterfall-proxy/config.yml:/config/config.yml"
+      - "./minecraft-config/mc-waterfall-proxy/plugins:/plugins"
     restart: unless-stopped
-  # This container is the first server you login to, it acts as a hub to access the other servers
+# This container is the first server you login to, it acts as a hub to access the other servers
   - service_name: mc-lobby
-    container_name: mc-lobby
     image: itzg/minecraft-server
     active: true
     environment:
@@ -43,6 +55,6 @@ containers:
       - "OPS={{ mc_ops }}"
       - "DIFFICULTY=peaceful"
       - "PVP=false"
-#    volumes:
-#      - "/path/to/data:/data"
+  #  volumes:
+  #    - "/path/to/data:/data"
     restart: unless-stopped
