--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,13 @@
 # Run command below to install roles/collections listed in this file.
-# ansible-galaxy role install -r requirements.yaml
+# ansible-galaxy install -r requirements.yml
 
 roles:
   # this role is what builds the docker-compose file based on the information in host/group_vars
   - name: ironicbadger.ansible_role_docker_compose_generator
   # this role verifies that docker and docker-compose is installed on the remote machine
   - name: geerlingguy.docker
+  # this role allows for easy editing of yaml config files (used for waterfall proxy config)
+  - name: kwoodson.yedit
 
 collections:
   # this collection includes the docker_compose plugin, needed to manage docker-compose
