--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -42,7 +42,7 @@ containers:
       - "./minecraft-config/mc-waterfall-proxy/plugins:/plugins"
     restart: unless-stopped
 # This container is the first server you login to, it acts as a hub to access the other servers
-  - service_name: mc-lobby
+  - service_name: lobby
     image: itzg/minecraft-server
     active: true
     environment:
