--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,8 @@
     - role: kwoodson.yedit
   tasks:
   - name: Configure waterfall proxy
-    yedit:
-      src: minecraft-config/mc-waterfall-proxy/config.yml
-      key: listeners.motd
-      value: "&3Kumpdev Ansible Testbed!"
+    template:
+      src: templates/waterfall-config.yml.j2
+      dest: minecraft-config/mc-waterfall-proxy/config-test.yml
+      owner: "{{ docker_compose_generator_uid }}"
+      group: "{{ docker_compose_generator_gid }}"
