A little more progress. Definitely working now, though it appears paper servers need to be mounted and then restarted at least once for OP setting to apply

--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -56,5 +56,5 @@ containers:
       - "DIFFICULTY=peaceful"
       - "PVP=false"
   #  volumes:
-  #    - "/path/to/data:/data"
+  #    - "./paper:/data"
     restart: unless-stopped
