--- a/minecraft-config/mc-waterfall-proxy/config.yml
+++ b/minecraft-config/mc-waterfall-proxy/config.yml
@@ -7,7 +7,7 @@ forge_support: false
 groups:
   Kumpy:
   - admin
-ip_forward: true
+ip_forward: false
 listeners:
 - bind_local_address: true
   force_default_server: false
