--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 docker-compose.yml
 minecraft-config/luckperms-mariadb/mysql/*
 minecraft-config/mc-waterfall-proxy/waterfall_plugins/*
+paper/*
+plugins/*
