--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -28,7 +28,7 @@ containers:
       - "MYSQL_USER={{ mysql_user }}"
       - "MYSQL_PASSWORD={{ mysql_pass }}"
     volumes:
-      - "./minecraft-config/luckperms-mariadb/mysql:/var/lib/mysql"
+      - "./luckperms-mariadb/mysql:/var/lib/mysql"
     restart: unless-stopped
 # This container is the waterfall proxy, it handles player connections to all servers in the network
   - service_name: mc-waterfall-proxy
@@ -39,8 +39,8 @@ containers:
     ports:
       - "{{ mc_connection_port}}:25577"
     volumes:
-      - "./minecraft-config/mc-waterfall-proxy/config.yml:/config/config.yml"
-      - "./minecraft-config/mc-waterfall-proxy/plugins:/plugins"
+      - "./mc-waterfall-proxy/config.yml:/config/config.yml"
+      - "./mc-waterfall-proxy/plugins:/plugins"
     restart: unless-stopped
 # This container is the first server you login to, it acts as a hub to access the other servers
   - service_name: lobby
@@ -64,5 +64,5 @@ containers:
       - "PLUGINS_SYNC_UPDATE=false"
     volumes:
       - "./plugins:/plugins"
-      - "./paper:/data"
+      - "./lobby:/data"
     restart: unless-stopped
