--- a/playbook.yml
+++ b/playbook.yml
@@ -9,9 +9,24 @@
     - role: ironicbadger.ansible_role_docker_compose_generator
     - role: kwoodson.yedit
   tasks:
+  - name: Ensure required directories are created
+    file:
+      path: "{{ item }}"
+      state: directory
+    loop:
+      - mc-waterfall-proxy
+      - lobby
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
-      dest: minecraft-config/mc-waterfall-proxy/config.yml
+      dest: mc-waterfall-proxy/config.yml
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
+  - name: Configure luckperms for the paper/spigot servers
+    template:
+      src: templates/luckperms-config.yml.j2
+      dest: "{{ item }}/plugins/LuckPerms/config.yml"
+      owner: "{{ docker_compose_generator_uid }}"
+      group: "{{ docker_compose_generator_gid }}"
+    loop:
+      - lobby
