Little more cleaning

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,8 +6,8 @@
   vars_files:
     - 'vars/vault.yaml'
   roles:
+#    - role: geerlingguy.docker
     - role: ironicbadger.ansible_role_docker_compose_generator
-    - role: kwoodson.yedit
   tasks:
   - name: Ensure required directories are created
     file:
