--- a/playbook.yml
+++ b/playbook.yml
@@ -11,11 +11,9 @@
   tasks:
   - name: Ensure required directories are created
     file:
-      path: "{{ item }}"
+      path: "{{ item.service_name }}"
       state: directory
-    loop:
-      - mc-waterfall-proxy
-      - lobby
+    loop: "{{ containers }}"
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
@@ -25,8 +23,8 @@
   - name: Configure luckperms for the paper/spigot servers
     template:
       src: templates/luckperms-config.yml.j2
-      dest: "{{ item }}/plugins/LuckPerms/config.yml"
+      dest: "{{ item.service_name }}/plugins/LuckPerms/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
-    loop:
-      - lobby
+    loop: "{{ containers }}"
+    when: item.environment[0] == 'TYPE=PAPER'
