--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -43,6 +43,7 @@ containers:
       - "./mc-waterfall-proxy/plugins:/plugins"
     restart: unless-stopped
 # This container is the first server you login to, it acts as a hub to access the other servers
+# Ensure that the server type is always the first environment variable for proper configuration
   - service_name: lobby
     image: itzg/minecraft-server
     active: true
