cleaned up issue with ansible not creating plugin directory before trying to set up luckperms config file. Also updated README with guidance on installing required roles and collections to run the playbook.

--- a/playbook.yml
+++ b/playbook.yml
@@ -14,6 +14,11 @@
       path: "{{ item.service_name }}"
       state: directory
     loop: "{{ containers }}"
+    file:
+      path: "{{ item.service_name }}/plugins/LuckPerms"
+      state: directory
+    loop: "{{ containers }}"
+    when: item.environment[0] == 'TYPE=PAPER'
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
