Updated localhost config to include server_name for bungeecord integration with servers

--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -50,6 +50,7 @@ containers:
     active: true
     environment:
       - "TYPE=PAPER"
+      - "SERVER_NAME=lobby"
       - "OVERRIDE_SERVER_PROPERTIES=true"
       - "EULA=true"
       - "ONLINE_MODE=false"
