--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -33,6 +33,7 @@ containers:
     restart: unless-stopped
 # This container is the waterfall proxy, it handles player connections to all servers in the network
   - service_name: mc-waterfall-proxy
+  # Refer to itzg/docker-bungeecord github for documentation on env variables and container configuration below
     image: itzg/bungeecord
     active: true
     environment:
@@ -46,6 +47,7 @@ containers:
 # This container is the first server you login to, it acts as a hub to access the other servers
 # Ensure that the server type is always the first environment variable for proper configuration
   - service_name: lobby
+  # Refer to itzg/docker-minecraft-server github for documentation on env variables and container configuration below
     image: itzg/minecraft-server
     active: true
     environment:
