--- a/.github/workflows/docker-compose-github-actions.yml
+++ b/.github/workflows/docker-compose-github-actions.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: ansible-galaxy install -r requirements.yml
       - run: echo ${{ secrets.VAULT_PASS }} >> .vault_pass.txt
       - run: ansible-playbook --vault-password-file .vault_pass.txt playbook.yml
