removed comment for geerlingguy docker role

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,7 @@
   vars_files:
     - 'vars/vault.yaml'
   roles:
-#    - role: geerlingguy.docker
+    - role: geerlingguy.docker
     - role: ironicbadger.ansible_role_docker_compose_generator
   tasks:
   - name: Ensure required directories are created
