--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,7 @@
 # ansible-playbook --ask-vault-pass playbook.yml
 
 - hosts: localhost
+  sudo: yes
   vars_files:
     - 'vars/vault.yaml'
   roles:
