--- a/.github/workflows/docker-compose-github-actions.yml
+++ b/.github/workflows/docker-compose-github-actions.yml
@@ -8,4 +8,5 @@ jobs:
       - run: ansible-galaxy install -r requirements.yml
       - run: echo ${{ secrets.VAULT_PASS }} >> .vault_pass.txt
 #      - run: ansible-playbook --vault-password-file .vault_pass.txt playbook.yml
-      - run: docker ps
+      - run: pwd
+      - run: ll
