--- a/playbook.yml
+++ b/playbook.yml
@@ -21,6 +21,7 @@
 
   roles:
     - role: geerlingguy.docker
+      become: yes
     - role: ironicbadger.ansible_role_docker_compose_generator
   tasks:
   - name: Ensure container volume mounts points are created
