--- a/.github/workflows/docker-compose-github-actions.yml
+++ b/.github/workflows/docker-compose-github-actions.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: BSFishy/pip-action@v1
+        with:
+          packages: docker
       - run: ansible-galaxy install -r requirements.yml
       - run: ansible-galaxy collection install community.general
       - run: echo ${{ secrets.VAULT_PASS }} >> .vault_pass.txt
