--- a/.github/workflows/docker-compose-github-actions.yml
+++ b/.github/workflows/docker-compose-github-actions.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v1
       - uses: BSFishy/pip-action@v1
         with:
-          packages: docker docker-compose
+          packages: docker docker-compose ansible
       - run: ansible-galaxy install -r requirements.yml
       - run: ansible-galaxy collection install community.general
       - run: echo ${{ secrets.VAULT_PASS }} >> .vault_pass.txt
