--- a/playbook.yml
+++ b/playbook.yml
@@ -25,20 +25,20 @@
   tasks:
   - name: Ensure container volume mounts points are created
     file:
-      path: "{{ item.service_name }}"
+      path: "data/{{ item.service_name }}"
       state: directory
     loop: "{{ containers }}"
 
   - name: Ensure luckperms folders are created
     file:
-      path: "{{ item.service_name }}/plugins/LuckPerms"
+      path: "data/{{ item.service_name }}/plugins/LuckPerms"
       state: directory
     loop: "{{ containers }}"
     when: item.environment[0] == 'TYPE=PAPER'
 
   - name: Ensure fabric config folder is created
     file:
-      path: "{{ item.service_name }}/config"
+      path: "data/{{ item.service_name }}/config"
       state: directory
     loop: "{{ containers }}"
     when: item.environment[0] == 'TYPE=FABRIC'
@@ -46,7 +46,7 @@
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
-      dest: "{{ item.service_name }}/config.yml"
+      dest: "data/{{ item.service_name }}/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
@@ -55,7 +55,7 @@
   - name: Configure luckperms for the paper/spigot servers
     template:
       src: templates/luckperms-config.yml.j2
-      dest: "{{ item.service_name }}/plugins/LuckPerms/config.yml"
+      dest: "data/{{ item.service_name }}/plugins/LuckPerms/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
@@ -64,7 +64,7 @@
   - name: Configure FabricProxy for the Fabric servers
     template:
       src: templates/FabricProxy.toml.j2
-      dest: "{{ item.service_name }}/config/FabricProxy.toml"
+      dest: "data/{{ item.service_name }}/config/FabricProxy.toml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
