Added creative server to config

--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -101,3 +101,28 @@ containers:
     volumes:
       - "./data/fabric:/data"
     restart: unless-stopped
+  - service_name: creative
+    image: itzg/minecraft_server
+    active: true
+    restricted: false
+    environment:
+      - "TYPE=PAPER"
+      - "OVERRIDE_SERVER_PROPERTIES=true"
+      - "EULA=true"
+      - "ONLINE_MODE=false"
+      - "VERSION={{ mc_version }}"
+      - "MEMORY=1G"
+      - "USE_AIKAR_FLAGS=true"
+      - "OPS={{ mc_ops }}"
+      - "DIFFICULTY=peaceful"
+      - "PVP=false"
+      - "SPAWN_PROTECTION=0"
+      - "MAX_WORLD_SIZE=1000"
+      - "GAMEMODE=CREATIVE"
+      - "WHITELIST={{ mc_whitelisted_players }}"
+      - "PLUGINS_SYNC_UPDATE=false"
+    # List mods to download below"
+      - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
+    volumes:
+      - "./plugins:/plugins"
+      - "./data/creative:/data"
