--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -9,12 +9,13 @@ proxy_priority_server: "lobby"
 
 # Variables that are used in configuration below
 mc_connection_port: 25565
-mc_version: "1.16.3"
-mc_ops: "Kumpy"
-mc_whitelisted_players: "Kumpy,Fett32,Baskest,B1ack_Raijin,Mojo_dodo"  # players should be listed separated by commas
+bedrock_connection_port: 19132
+mc_version: "1.16.4"
+mc_ops: "Kumpy,Fett32"
+mc_whitelisted_players: "Kumpy,Fett32,Baskest,B1ack_Raijin,Mojo_dodo,Cailinbrv,*Endercatgirl00"  # players should be listed separated by commas
 
 # ironicbadger.docker_compose_generator
-docker_compose_generator_output_path: "."
+docker_compose_generator_output_path: "~/lab/mc-network-test"
 
 containers:
 # This container is used for the luckperms database so that the server network has one central permissions system.
@@ -40,10 +41,16 @@ containers:
     environment:
       - "TYPE=WATERFALL"
     ports:
-      - "{{ mc_connection_port}}:25577"
+      - "{{ mc_connection_port }}:25577"
+      - "{{ bedrock_connection_port }}:19132/udp"
     volumes:
-      - "./data/mc-waterfall-proxy/config.yml:/config/config.yml"
-      - "./data/mc-waterfall-proxy/plugins:/plugins"
+      - "./data/mc-waterfall-proxy:/server"
+      - "./bungee-plugins:/plugins"
+    depends_on:
+      - lobby
+      - fabric
+      - creative
+      - leber
     restart: unless-stopped
 # This container is the first server you login to, it acts as a hub to access the other servers
 # Ensure that the server type is always the first environment variable for proper configuration
@@ -65,12 +72,14 @@ containers:
       - "OPS={{ mc_ops }}"
       - "DIFFICULTY=peaceful"
       - "PVP=false"
+      - "LEVEL=LobbyWorld"
       - "SPAWN_PROTECTION=0"
       - "MAX_WORLD_SIZE=100"
+      - "ENFORCE_WHITELIST=true"
       - "WHITELIST={{ mc_whitelisted_players }}"
       - "PLUGINS_SYNC_UPDATE=false"
     # List plugins to download below
-      - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
+    #- "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
     volumes:
     # Optional method to install plugins on server. Add .jar files to ./plugins directory
     # The downside to this option is that they cannot auto update
@@ -87,22 +96,25 @@ containers:
       - "EULA=true"
       - "ONLINE_MODE=false"
       - "VERSION={{ mc_version }}"
-      - "MEMORY=4G"
+      - "MEMORY=3G"
       - "USE_AIKAR_FLAGS=true"
       - "OPS={{ mc_ops }}"
       - "DIFFICULTY=hard"
       - "PVP=true"
+      - "LEVEL=1_11 Kumpback"
       - "SPAWN_PROTECTION=0"
       - "MAX_WORLD_SIZE=10000"
+      - "ENFORCE_WHITELIST=true"
       - "WHITELIST={{ mc_whitelisted_players }}"
       - "PLUGINS_SYNC_UPDATE=false"
     # List mods to download below"
-      - "MODS=https://github.com/OKTW-Network/FabricProxy/releases/download/v1.3.3/FabricProxy-1.3.3.jar"
+    #- "MODS=https://github.com/OKTW-Network/FabricProxy/releases/download/v1.3.3/FabricProxy-1.3.3.jar"
     volumes:
+      - "./fabric-mods:/mods"
       - "./data/fabric:/data"
     restart: unless-stopped
   - service_name: creative
-    image: itzg/minecraft_server
+    image: itzg/minecraft-server
     active: true
     restricted: false
     environment:
@@ -116,20 +128,22 @@ containers:
       - "OPS={{ mc_ops }}"
       - "DIFFICULTY=peaceful"
       - "PVP=false"
+      - "LEVEL=CreativeWorld"
       - "SPAWN_PROTECTION=0"
       - "MAX_WORLD_SIZE=1000"
       - "GAMEMODE=CREATIVE"
+      - "ENFORCE_WHITELIST=true"
       - "WHITELIST={{ mc_whitelisted_players }}"
       - "PLUGINS_SYNC_UPDATE=false"
     # List mods to download below"
-      - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
+    # - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
     volumes:
       - "./plugins:/plugins"
       - "./data/creative:/data"
   - service_name: leber
     image: itzg/minecraft-server
     active: true
-    restricted: true
+    restricted: false
     environment:
       - "TYPE=PAPER"
       - "OVERRIDE_SERVER_PROPERTIES=true"
@@ -139,14 +153,16 @@ containers:
       - "MEMORY=1G"
       - "USE_AIKAR_FLAGS=true"
       - "OPS={{ mc_ops }}"
-      - "DIFFICULTY=peaceful"
+      - "DIFFICULTY=easy"
+      - "SPAWN_MONSTERS=false"
       - "PVP=false"
       - "SPAWN_PROTECTION=0"
       - "MAX_WORLD_SIZE=5000"
+      - "ENFORCE_WHITELIST=true"
       - "WHITELIST={{ mc_whitelisted_players }}"
       - "PLUGINS_SYNC_UPDATE=false"
     # List mods to download below"
-      - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
+    #  - "MODS=https://ci.lucko.me/job/LuckPerms/1173/artifact/bukkit/build/libs/LuckPerms-Bukkit-5.2.8.jar"
     volumes:
       - "./data/leber:/data"
     restart: unless-stopped
