--- a/playbook.yml
+++ b/playbook.yml
@@ -25,37 +25,52 @@
   tasks:
   - name: Ensure container volume mounts points are created
     file:
-      path: "data/{{ item.service_name }}"
+      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}"
       state: directory
     loop: "{{ containers }}"
 
   - name: Ensure luckperms folders are created
     file:
-      path: "data/{{ item.service_name }}/plugins/LuckPerms"
+      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/LuckPerms"
       state: directory
     loop: "{{ containers }}"
     when: item.environment[0] == 'TYPE=PAPER'
 
+  - name: Ensure paper/spigot plugins folder is created
+    file:
+      path: "{{ docker_compose_generator_output_path }}/plugins"
+      state: directory
+
   - name: Ensure fabric config folder is created
     file:
-      path: "data/{{ item.service_name }}/config"
+      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config"
       state: directory
     loop: "{{ containers }}"
     when: item.environment[0] == 'TYPE=FABRIC'
 
+  - name: Create fabric mods directory
+    file:
+      path: "{{ docker_compose_generator_output_path }}/fabric-mods"
+      state: directory
+
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
-      dest: "data/{{ item.service_name }}/config.yml"
+      dest: "{{docker_compose_generator_output_path }}/data/{{ item.service_name }}/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
     when: item.image == 'itzg/bungeecord'
 
+  - name: Create waterfall plugins directory
+    file:
+      path: "{{ docker_compose_generator_output_path }}/bungee-plugins"
+      state: directory
+
   - name: Configure luckperms for the paper/spigot servers
     template:
       src: templates/luckperms-config.yml.j2
-      dest: "data/{{ item.service_name }}/plugins/LuckPerms/config.yml"
+      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/LuckPerms/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
@@ -64,7 +79,7 @@
   - name: Configure FabricProxy for the Fabric servers
     template:
       src: templates/FabricProxy.toml.j2
-      dest: "data/{{ item.service_name }}/config/FabricProxy.toml"
+      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config/FabricProxy.toml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
