Adjust docker-compose build further

--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -131,7 +131,8 @@ containers:
       - "LEVEL=CreativeWorld"
       - "SPAWN_PROTECTION=0"
       - "MAX_WORLD_SIZE=1000"
-      - "GAMEMODE=CREATIVE"
+      - "FORCE_GAMEMODE=true"
+      - "MODE=creative"
       - "ENFORCE_WHITELIST=true"
       - "WHITELIST={{ mc_whitelisted_players }}"
       - "PLUGINS_SYNC_UPDATE=false"
