--- a/playbook.yml
+++ b/playbook.yml
@@ -106,6 +106,15 @@
     loop: "{{ containers }}"
     when: item.environment[0] == 'TYPE=FABRIC'
 
+  - name: Copy over whitelist.json file to servers
+    copy:
+      src: /media/shared/misc/whitelist.json
+      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/whitelist.json"
+      owner: "{{ docker_compose_generator_uid }}"
+      group: "{{ docker_compose_generator_gid }}"
+    loop: "{{ containers }}"
+    when: item.image == 'itzg/minecraft-server'
+
 # Uncomment Below if you wish for server network to be started at end of playbook
 #  - name: Start server network using docker-compose
 #    community.general.docker_compose:
