--- a/playbook.yml
+++ b/playbook.yml
@@ -86,10 +86,21 @@
       dest: "{{ docker_compose_generator_output_path }}/fabric-mods"
       delete: yes
 
+  - name: Configure spigot.yml on paper servers
+    template:
+      src: templates/spigot.yml.j2
+      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/spigot.yml"
+      owner: "{{ docker_compose_generator_uid }}"
+      group: "{{ docker_compose_generator_gid }}"
+    loop: "{{ containers }}"
+    loop_control:
+      label: "{{ item.service_name }}"
+    when: item.environment[0] == 'TYPE=PAPER'
+
   - name: Configure waterfall proxy
     template:
       src: templates/waterfall-config.yml.j2
-      dest: "{{docker_compose_generator_output_path }}/data/{{ item.service_name }}/config.yml"
+      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
