--- a/host_vars/dockerhost.yml
+++ b/host_vars/dockerhost.yml
@@ -14,7 +14,7 @@ mc_version: "1.16.4"
 mc_ops: "Kumpy,Fett32"
 
 # ironicbadger.docker_compose_generator
-docker_compose_generator_output_path: "~/archive/bungee-staging"
+docker_compose_generator_output_path: "~/docker/bungee"
 
 containers:
 # This container is used for the luckperms database so that the server network has one central permissions system.
