--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,7 @@
 - hosts: all
   vars_files:
     - 'vars/vault.yaml'
+    - 'vars/plugins.yml'
 
   pre_tasks:
 
@@ -74,11 +75,35 @@
 
 # ACTUAL TASKS BEGIN HERE, TO INCLUDE COPYING CONFIG FILES AND TEMPLATES OVER
   tasks:
-  - name: Copy paper/spigot plugins to remote directory (from local share)
+  - name: Copy common paper/spigot plugins to remote directory (from local share)
     synchronize:
-      src: /media/shared/misc/spigot-plugins/
-      dest: "{{ docker_compose_generator_output_path }}/plugins"
+      src: "/media/shared/misc/spigot-plugins/{{ item }}"
+      dest: "{{ docker_compose_generator_output_path }}/plugins/{{ item }}"
       delete: yes
+    loop:
+      - "{{ EssentialsX }}"
+      - "{{ EssentialsXSpawn }}"
+      - "{{ LuckPerms }}"
+      - "{{ ViaBackwards }}"
+      - "{{ ViaVersion }}"
+      - "{{ WorldEdit }}"
+      - "{{ WorldGuard }}"
+
+  - name: Copy specific plugins to lobby server (from local share)
+    synchronize:
+      src: "/media/shared/misc/spigot-plugins/{{ item }}"
+      dest: "{{ docker_compose_generator_output_path }}/data/lobby/plugins/"
+      delete: yes
+    loop:
+      - "{{ SimplePortals }}"
+
+  - name: Copy specific plugins to leber server (from local share)
+    synchronize:
+      src: "/media/shared/misc/spigot-plugins/{{ item }}"
+      dest: "{{ docker_compose_generator_output_path }}/data/leber/plugins/"
+      delete: yes
+    loop:
+      - "{{ mcMMO }}"
 
   - name: Copy fabric mods to remote directory (from local share)
     synchronize:
