--- a/playbook.yml
+++ b/playbook.yml
@@ -70,6 +70,16 @@
       path: "{{ docker_compose_generator_output_path }}/bungee-plugins"
       state: directory
 
+  - name: Create Geyser-BungeeCord(Waterfall) config directory
+    file:
+      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/Geyser-BungeeCord"
+      state: directory
+    loop: "{{ containers }}"
+    loop_control:
+      label: "{{ item.service_name }}"
+    when: item.image == 'itzg/bungeecord'
+
+
   roles:
     - role: ironicbadger.ansible_role_docker_compose_generator
 
@@ -126,6 +136,17 @@
     template:
       src: templates/waterfall-config.yml.j2
       dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config.yml"
+      owner: "{{ docker_compose_generator_uid }}"
+      group: "{{ docker_compose_generator_gid }}"
+    loop: "{{ containers }}"
+    loop_control:
+      label: "{{ item.service_name }}"
+    when: item.image == 'itzg/bungeecord'
+
+  - name: Configure Geyser-BungeeCord(Waterfall)
+    template:
+      src: templates/geyser-config.yml.j2
+      dest: "{{docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/Geyser-BungeeCord/config.yml"
       owner: "{{ docker_compose_generator_uid }}"
       group: "{{ docker_compose_generator_gid }}"
     loop: "{{ containers }}"
