--- a/playbook.yml
+++ b/playbook.yml
@@ -29,159 +29,15 @@
     loop_control:
       label: "{{ item.service_name }}"
 
-  - name: Ensure luckperms directories are created
-    file:
-      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/LuckPerms"
-      state: directory
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=PAPER'
-
-  - name: Ensure paper/spigot plugins directory is created
-    file:
-      path: "{{ docker_compose_generator_output_path }}/plugins"
-      state: directory
-
-  - name: Purge previous paper/spigot plugins from server directories
-    shell: "rm {{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/*.jar"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=PAPER'
-    ignore_errors: yes
-
-  - name: Ensure fabric config directory is created
-    file:
-      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config"
-      state: directory
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=FABRIC'
-
-  - name: Create fabric mods directory
-    file:
-      path: "{{ docker_compose_generator_output_path }}/fabric-mods"
-      state: directory
-
-  - name: Create waterfall plugins directory
-    file:
-      path: "{{ docker_compose_generator_output_path }}/bungee-plugins"
-      state: directory
-
-  - name: Create Geyser-BungeeCord(Waterfall) config directory
-    file:
-      path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/Geyser-BungeeCord"
-      state: directory
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.image == 'itzg/bungeecord'
-
-
   roles:
     - role: ironicbadger.ansible_role_docker_compose_generator
+    - role: fabric
+    - role: luckperms
+    - role: paper
+    - role: waterfall
 
-# ACTUAL TASKS BEGIN HERE, TO INCLUDE COPYING CONFIG FILES AND TEMPLATES OVER
   tasks:
-  - name: Copy common paper/spigot plugins to remote directory (from local share)
-    synchronize:
-      src: "/media/shared/misc/spigot-plugins/{{ item }}"
-      dest: "{{ docker_compose_generator_output_path }}/plugins/{{ item }}"
-      delete: yes
-    loop:
-      - "{{ EssentialsX }}"
-      - "{{ EssentialsXSpawn }}"
-      - "{{ LuckPerms }}"
-      - "{{ ViaBackwards }}"
-      - "{{ ViaVersion }}"
-      - "{{ WorldEdit }}"
-      - "{{ WorldGuard }}"
-
-  - name: Copy specific plugins to lobby server (from local share)
-    synchronize:
-      src: "/media/shared/misc/spigot-plugins/{{ item }}"
-      dest: "{{ docker_compose_generator_output_path }}/data/lobby/plugins/"
-      delete: yes
-    loop:
-      - "{{ SimplePortals }}"
-
-  - name: Copy specific plugins to leber server (from local share)
-    synchronize:
-      src: "/media/shared/misc/spigot-plugins/{{ item }}"
-      dest: "{{ docker_compose_generator_output_path }}/data/leber/plugins/"
-      delete: yes
-    loop:
-      - "{{ mcMMO }}"
-
-  - name: Copy fabric mods to remote directory (from local share)
-    synchronize:
-      src: /media/shared/misc/fabric-mods/
-      dest: "{{ docker_compose_generator_output_path }}/fabric-mods"
-      delete: yes
-
-  - name: Configure spigot.yml on paper servers
-    template:
-      src: templates/spigot.yml.j2
-      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/spigot.yml"
-      owner: "{{ docker_compose_generator_uid }}"
-      group: "{{ docker_compose_generator_gid }}"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=PAPER'
-
-  - name: Configure waterfall proxy
-    template:
-      src: templates/waterfall-config.yml.j2
-      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config.yml"
-      owner: "{{ docker_compose_generator_uid }}"
-      group: "{{ docker_compose_generator_gid }}"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.image == 'itzg/bungeecord'
-
-  - name: Configure Geyser-BungeeCord(Waterfall)
-    template:
-      src: templates/geyser-config.yml.j2
-      dest: "{{docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/Geyser-BungeeCord/config.yml"
-      owner: "{{ docker_compose_generator_uid }}"
-      group: "{{ docker_compose_generator_gid }}"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.image == 'itzg/bungeecord'
-
-  - name: Copy waterfall plugins to remote directory (from local share)
-    synchronize:
-      src: /media/shared/misc/bungee-plugins/
-      dest: "{{ docker_compose_generator_output_path }}/bungee-plugins"
-      delete: yes
-
-  - name: Configure luckperms for the paper/spigot servers
-    template:
-      src: templates/luckperms-config.yml.j2
-      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/plugins/LuckPerms/config.yml"
-      owner: "{{ docker_compose_generator_uid }}"
-      group: "{{ docker_compose_generator_gid }}"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=PAPER'
-
-  - name: Configure FabricProxy for the Fabric servers
-    template:
-      src: templates/FabricProxy.toml.j2
-      dest: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/config/FabricProxy.toml"
-      owner: "{{ docker_compose_generator_uid }}"
-      group: "{{ docker_compose_generator_gid }}"
-    loop: "{{ containers }}"
-    loop_control:
-      label: "{{ item.service_name }}"
-    when: item.environment[0] == 'TYPE=FABRIC'
-
+    
   - name: Copy over whitelist.json file to servers
     copy:
       src: /media/shared/misc/whitelist.json
