Adjusted view distance for fabric server

--- a/host_vars/dockerhost.yml
+++ b/host_vars/dockerhost.yml
@@ -102,6 +102,7 @@ containers:
       - "PVP=true"
       - "LEVEL=1_11 Kumpback"
       - "SPAWN_PROTECTION=0"
+      - "VIEW_DISTANCE=18"
       - "MAX_WORLD_SIZE=15000"
       - "ENFORCE_WHITELIST=true"
       - "REMOVE_OLD_MODS=true"
